--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
   <footer class="footer">
     &copy; 2026 Lawraj. All rights reserved.<br>
-    <a href="#privacy">Privacy Policy</a> | <a href="#privacy">Terms of Service</a>
+    <a href="privacy.html">Privacy Policy</a> | <a href="terms.html">Terms of Service</a>
   </footer>
 
 </body>
