--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
         border-radius: 6px;
         margin-top: 10px;
         font-size: 14px;
+        font-weight: 500;
     }
     .contact-btn:hover {
         background-color: #1d4ed8;
@@ -166,6 +167,10 @@
         Chandigarh - 160002, India
       </div>
 
+      <h2>Services</h2>
+      <p>Explore our analytics packages and lawyer selection tools.</p>
+      <a href="pricing.html" class="contact-btn">View Pricing & Plans</a>
+
       <h2>Contact Us</h2>
       <p>For support, legal inquiries, or verification purposes:</p>
       <p><strong>Email:</strong> <a href="mailto:admin@lawraj.com">admin@lawraj.com</a></p>
@@ -183,7 +188,7 @@
 
   <footer class="footer">
     &copy; 2026 Lawraj. All rights reserved.<br>
-    <a href="privacy.html">Privacy Policy</a> | <a href="terms.html">Terms of Service</a>
+    <a href="pricing.html">Pricing</a> | <a href="privacy.html">Privacy Policy</a> | <a href="terms.html">Terms of Service</a>
   </footer>
 
 </body>
