--- a/index.html
+++ b/index.html
@@ -25,6 +25,17 @@
       min-height: 100vh;
     }
 
+    /* DISCLAIMER BANNER - CRITICAL FOR AVOIDING FLAGS */
+    .gov-disclaimer {
+      background-color: #fef3c7;
+      color: #92400e;
+      text-align: center;
+      padding: 10px;
+      font-size: 13px;
+      font-weight: 600;
+      border-bottom: 1px solid #fcd34d;
+    }
+
     .wrapper {
       flex: 1;
       display: flex;
@@ -144,6 +155,10 @@
 </head>
 <body>
 
+  <div class="gov-disclaimer">
+    Notice: This is a private analytics platform. Not affiliated with the Supreme Court of India or any government body.
+  </div>
+
   <div class="wrapper">
     <div class="card">
       <div class="header">
@@ -156,7 +171,7 @@
       </p>
 
       <h2>Corporate Information</h2>
-      <p><strong>Legal Entity Name:</strong> Lawraj</p>
+      <p><strong>Legal Entity Name:</strong> Lawraj Private Limited</p>
       <p><strong>Nature of Business:</strong> Legal Technology / SaaS</p>
       
       <h2>Registered Address</h2>
